# mmr-header-accumulator

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  example_input.json
evm-grower-hints/: Cargo.toml
evm-grower-hints/src/: error.rs  hint_processor.rs  lib.rs  main.rs
evm-grower-hints/src/hints/: input.rs  mmr.rs  mod.rs
mmr-header-accumulator-hints/: Cargo.toml
mmr-header-accumulator-hints/src/: error.rs  hint_processor.rs  lib.rs  main.rs
mmr-header-accumulator-hints/src/hints/: input.rs  mmr.rs  mod.rs
mmr-header-accumulator-hints/src/types/: mod.rs
rust_hints/: Cargo.toml
rust_hints/src/core/: sha.rs
rust_hints/src/debug/: debug.rs
scripts/: activate.sh  cairo-compile.sh  format.sh  setup.sh
src/beacon/: README.md  lib.cairo  main.cairo  types.cairo
src/core/: sha.cairo  ssz.cairo  utils.cairo
src/debug/: lib.cairo
src/mmr/: core.cairo  leaf_hash.cairo  lib.cairo  types.cairo  utils.cairo
tools/make/: requirements.txt
